--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -75,6 +75,7 @@
 	  <a href="it/pdf/2. Periferní zařízení.pdf" class="file-it-link">2. Periferní zařízení</a>
 	  <a href="it/pdf/3. Úložná zařízení, autorský zákon.pdf" class="file-it-link">3. Úložná zařízení, autorský zákon</a>
 	  <a href="it/pdf/4. Přenosná zařízení.pdf" class="file-it-link">4. Přenosná zařízení</a>
+	  <a href="it/pdf/5. Internet věcí.pdf" class="file-it-link">5. Internet věcí</a>
 
 	  </div> 
 	  
@@ -83,7 +84,8 @@
 	  <a href="it/docx/1. Základní počítačové komponenty.docx" class="file-it-link">1. Základní počítačové komponenty</a> 
 	  <a href="it/docx/2. Periferní zařízení.docx" class="file-it-link">2. Periferní zařízení</a> 
 	  <a href="it/docx/3. Úložná zařízení, autorský zákon.docx" class="file-it-link">3. Úložná zařízení, autorský zákon</a> 
-	  <a href="it/docx/4. Přenosná zařízení.docx" class="file-it-link">4. Přenosná zařízení</a> 
+	  <a href="it/docx/4. Přenosná zařízení.docx" class="file-it-link">4. Přenosná zařízení</a>
+	  <a href="it/docx/5. Internet věcí.docx" class="file-it-link">5. Internet věcí</a>
 
 	  </div>
 	  
