--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Infis Maturita & Infis Stuff</title>
+    <title>Infis Maturita & Infis Help</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
-    <h1 id="header">Infis Maturita & Infis Stuff</h1>
+    <h1 id="header">Infis Maturita & Infis Help</h1>
     <div class="categories">
 	  <a href="InfisMaturita/infisMaturita.html" class="category">Maturita</a>
 	  <a href="Programovani/programovani.html" class="category">Programování</a>
