--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -16,7 +16,9 @@
 	  <p class="file-literatura-text-main">Analýza Textu</p>
 	  <a href="literatura/others/literaturaOsnova.pdf" class="file-literatura-link">Osnova</a> 
 	  <a href="literatura/others/analyza.pdf" class="file-literatura-link">Analýza</a> 
+	  <a href="https://www.eknihovna.cz/literarni-druhy/" class="file-literatura-link">Literární druhy</a> 
 	  <a href="literatura/others/Vlastni_seznam_cetby_-_sablona.xlsx" class="file-literatura-link">Šablona pro odevzdání seznamu knih</a> 
+
 	  
 	  <p class="file-literatura-text-main-second">Rozbor Knih</p>	  
 	  <p class="file-literatura-text-main-filetype"> PDF </p>
@@ -76,6 +78,7 @@
 	  <a href="it/pdf/3. Úložná zařízení, autorský zákon.pdf" class="file-it-link">3. Úložná zařízení, autorský zákon</a>
 	  <a href="it/pdf/4. Přenosná zařízení.pdf" class="file-it-link">4. Přenosná zařízení</a>
 	  <a href="it/pdf/5. Internet věcí.pdf" class="file-it-link">5. Internet věcí</a>
+	  <a href="it/pdf/6. Typy sítí, standardizace síťové komunikace.pdf" class="file-it-link">6. Typy sítí, standardizace síťové komunikace</a>
 
 	  </div> 
 	  
@@ -86,6 +89,7 @@
 	  <a href="it/docx/3. Úložná zařízení, autorský zákon.docx" class="file-it-link">3. Úložná zařízení, autorský zákon</a> 
 	  <a href="it/docx/4. Přenosná zařízení.docx" class="file-it-link">4. Přenosná zařízení</a>
 	  <a href="it/docx/5. Internet věcí.docx" class="file-it-link">5. Internet věcí</a>
+	  <a href="it/docx/6. Typy sítí, standardizace síťové komunikace.docx" class="file-it-link">6. Typy sítí, standardizace síťové komunikace</a>
 
 	  </div>
 	  
