--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -79,6 +79,8 @@
 	  <a href="it/pdf/4. Přenosná zařízení.pdf" class="file-it-link">4. Přenosná zařízení</a>
 	  <a href="it/pdf/5. Internet věcí.pdf" class="file-it-link">5. Internet věcí</a>
 	  <a href="it/pdf/6. Typy sítí, standardizace síťové komunikace.pdf" class="file-it-link">6. Typy sítí, standardizace síťové komunikace</a>
+	  <a href="it/pdf/7. Přístup k síti.pdf" class="file-it-link">7. Přístup k síti</a>
+	  <a href="it/pdf/8. Síťová vrstva.pdf" class="file-it-link">8. Síťová vrstva</a>
 
 	  </div> 
 	  
@@ -90,6 +92,8 @@
 	  <a href="it/docx/4. Přenosná zařízení.docx" class="file-it-link">4. Přenosná zařízení</a>
 	  <a href="it/docx/5. Internet věcí.docx" class="file-it-link">5. Internet věcí</a>
 	  <a href="it/docx/6. Typy sítí, standardizace síťové komunikace.docx" class="file-it-link">6. Typy sítí, standardizace síťové komunikace</a>
+	  <a href="it/docx/7. Přístup k síti.docx" class="file-it-link">7. Přístup k síti</a>
+	  <a href="it/docx/8. Síťová vrstva.docx" class="file-it-link">8. Síťová vrstva</a>
 
 	  </div>
 	  
