--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -81,6 +81,8 @@
 	  <a href="it/pdf/6. Typy sítí, standardizace síťové komunikace.pdf" class="file-it-link">6. Typy sítí, standardizace síťové komunikace</a>
 	  <a href="it/pdf/7. Přístup k síti.pdf" class="file-it-link">7. Přístup k síti</a>
 	  <a href="it/pdf/8. Síťová vrstva.pdf" class="file-it-link">8. Síťová vrstva</a>
+	  <a href="it/pdf/9. Trasportní a aplikační vrstva.pdf" class="file-it-link">9. Trasportní a aplikační vrstva</a>
+	  <a href="it/pdf/10. Kryptografie, PKI a legislativa v IT.pdf" class="file-it-link">10. Kryptografie, PKI a legislativa v IT</a>
 
 	  </div> 
 	  
@@ -94,6 +96,8 @@
 	  <a href="it/docx/6. Typy sítí, standardizace síťové komunikace.docx" class="file-it-link">6. Typy sítí, standardizace síťové komunikace</a>
 	  <a href="it/docx/7. Přístup k síti.docx" class="file-it-link">7. Přístup k síti</a>
 	  <a href="it/docx/8. Síťová vrstva.docx" class="file-it-link">8. Síťová vrstva</a>
+	  <a href="it/docx/9. Trasportní a aplikační vrstva.docx" class="file-it-link">9. Trasportní a aplikační vrstva</a>
+	  <a href="it/docx/10. Kryptografie, PKI a legislativa v IT.docx" class="file-it-link">10. Kryptografie, PKI a legislativa v IT</a>
 
 	  </div>
 	  
