--- a/Ostatni/ostatni.html
+++ b/Ostatni/ostatni.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <h1 id="header">Infis Ostatní</h1>
-	<h2 class="programovani-header-text">Zde nalezneš užitečné odkazy</h2>
+	<h2 class="programovani-header-text">Zde nalezneš užitečné věci</h2>
 	
 	
     <div class="categories">
-      <div class="category" onclick="showCategory('category1')">Linky</div>
+      <div class="category" onclick="showCategory('category1')">Odkazy</div>
     </div>
     <div class="category1 files">
 	   <a href="https://bakalari.ssinfis.cz/Timetable/Public/Actual/Class/Y9" class="file-programovani-link">Lepší Bakaláři</a>
