--- a/Programovani/programovani.html
+++ b/Programovani/programovani.html
@@ -13,7 +13,7 @@
     <div class="categories">
       <div class="category" onclick="showCategory('category1')">2. Ročník 2020/2021</div>
       <div class="category" onclick="showCategory('category2')">3. Ročník 2022/2023</div>
-      <div class="category" onclick="showCategory('category3')"></div>
+      <!--<div class="category" onclick="showCategory('category3')"></div>-->
     </div>
     <div class="category1 files">
 	   <a href="2. Ročník 2020 2021/All.zip" class="file-programovani-link">Download All</a>
