--- a/Site/site.html
+++ b/Site/site.html
@@ -9,8 +9,8 @@
     <h1 id="header">Infis Sítě</h1>
 	
     <div class="categories">
-      <div class="category" onclick="showCategory('category1')">Blank</div>
-      <div class="category" onclick="showCategory('category2')">Blank</div>
+      <!--<div class="category" onclick="showCategory('category1')">Blank</div>
+      <div class="category" onclick="showCategory('category2')">Blank</div>-->
       <div class="category" onclick="showCategory('category3')">Others</div>
     </div>
     <div class="category1 files">
