--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -86,7 +86,15 @@
 	  <a href="it/pdf/9. Trasportní a aplikační vrstva.pdf" class="file-it-link">9. Trasportní a aplikační vrstva</a>
 	  <a href="it/pdf/10. Kryptografie, PKI a legislativa v IT.pdf" class="file-it-link">10. Kryptografie, PKI a legislativa v IT</a>
 	  <a href="it/pdf/11. Bezpečnost IT.pdf" class="file-it-link">11. Bezpečnost IT</a>
+	  <a href="it/pdf/12. Funkce a typy OS, OS Windows.pdf" class="file-it-link">12. Funkce a typy OS, OS Windows</a>
+	  <a href="it/pdf/13. Příkazové rozhraní, OS Linux.pdf" class="file-it-link">13. Příkazové rozhraní, OS Linux</a>
+	  <a href="it/pdf/14. Síťové služby.pdf" class="file-it-link">14. Síťové služby</a>
+	  <a href="it/pdf/15. Číselné soustavy a uložení čísel v počítači.pdf" class="file-it-link">15. Číselné soustavy a uložení čísel v počítači</a>
+	  <a href="it/pdf/16. Grafické značky používané při prezentaci algoritmů, třídící.pdf" class="file-it-link">16. Grafické značky používané při prezentaci algoritmů, třídící</a>
+	  <a href="it/pdf/17. Základní datové typy, datové struktury.pdf" class="file-it-link">17. Základní datové typy, datové struktury</a>
+	  <a href="it/pdf/18. Webové technologie.pdf" class="file-it-link">18. Webové technologie</a>
 	  <a href="it/pdf/19. Programování v aplikacích a tvorba formulářových aplikací.pdf" class="file-it-link">19. Programování v aplikacích a tvorba formulářových aplikací</a>
+	  <a href="it/pdf/20. Databáze.pdf" class="file-it-link">20. Databáze</a>
 
 	  </div> 
 	  
@@ -103,7 +111,15 @@
 	  <a href="it/docx/9. Trasportní a aplikační vrstva.docx" class="file-it-link">9. Trasportní a aplikační vrstva</a>
 	  <a href="it/docx/10. Kryptografie, PKI a legislativa v IT.docx" class="file-it-link">10. Kryptografie, PKI a legislativa v IT</a>
 	  <a href="it/docx/11. Bezpečnost IT.docx" class="file-it-link">11. Bezpečnost IT</a>
+	  <a href="it/docx/12. Funkce a typy OS, OS Windows.docx" class="file-it-link">12. Funkce a typy OS, OS Windows</a>
+	  <a href="it/docx/13. Příkazové rozhraní, OS Linux.docx" class="file-it-link">13. Příkazové rozhraní, OS Linux</a>
+	  <a href="it/docx/14. Síťové služby.docx" class="file-it-link">14. Síťové služby</a>
+	  <a href="it/docx/15. Číselné soustavy a uložení čísel v počítači.docx" class="file-it-link">15. Číselné soustavy a uložení čísel v počítači</a>
+	  <a href="it/docx/16. Grafické značky používané při prezentaci algoritmů, třídící.docx" class="file-it-link">16. Grafické značky používané při prezentaci algoritmů, třídící</a>
+	  <a href="it/docx/17. Základní datové typy, datové struktury.docx" class="file-it-link">17. Základní datové typy, datové struktury</a>
+	  <a href="it/docx/18. Webové technologie.docx" class="file-it-link">18. Webové technologie</a>
 	  <a href="it/docx/19. Programování v aplikacích a tvorba formulářových aplikací.docx" class="file-it-link">19. Programování v aplikacích a tvorba formulářových aplikací</a>
+	  <a href="it/docx/20. Databáze.docx" class="file-it-link">20. Databáze</a>
 
 	  </div>
 	  
