--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -36,7 +36,7 @@
 	  <a href="literatura/pdf/11. Válka s Mloky.pdf" class="file-literatura-link">11. Válka s Mloky</a>
 	  <a href="literatura/pdf/12. Bylo nás pět.pdf" class="file-literatura-link">12. Bylo nás pět</a>
 	  <a href="literatura/pdf/13. Malý princ.pdf" class="file-literatura-link">13. Malý princ</a>
-	  <a href="literatura/pdf/14. Rozmarné léto.pdf" class="file-literatura-link">14. Rozmarné léto</a>
+	  <a href="literatura/pdf/14. Rozmarné Léto.pdf" class="file-literatura-link">14. Rozmarné léto</a>
 	  <a href="literatura/pdf/15. Farma zvířat.pdf" class="file-literatura-link">15. Farma zvířat</a>
 	  <a href="literatura/pdf/16. Spalovač mrtvol.pdf" class="file-literatura-link">16. Spalovač mrtvol</a>
 	  <a href="literatura/pdf/17. Lakomec.pdf" class="file-literatura-link">17. Lakomec</a>
@@ -59,7 +59,7 @@
 	  <a href="literatura/docx/11. Válka s Mloky.docx" class="file-literatura-link">11. Válka s Mloky</a>
 	  <a href="literatura/docx/12. Bylo nás pět.docx" class="file-literatura-link">12. Bylo nás pět</a>
 	  <a href="literatura/docx/13. Malý princ.docx" class="file-literatura-link">13. Malý princ</a>
-	  <a href="literatura/docx/14. Rozmarné léto.docx" class="file-literatura-link">14. Rozmarné léto</a>
+	  <a href="literatura/docx/14. Rozmarné Léto.docx" class="file-literatura-link">14. Rozmarné léto</a>
 	  <a href="literatura/docx/15. Farma zvířat.docx" class="file-literatura-link">15. Farma zvířat</a>
 	  <a href="literatura/docx/16. Spalovač mrtvol.docx" class="file-literatura-link">16. Spalovač mrtvol</a>
 	  <a href="literatura/docx/17. Lakomec.docx" class="file-literatura-link">17. Lakomec</a>
