--- a/Ostatni/ostatni.html
+++ b/Ostatni/ostatni.html
@@ -16,6 +16,8 @@
     <div class="category1 files">
 	   <a href="https://bakalari.ssinfis.cz/Timetable/Public/Actual/Class/Y9" class="file-programovani-link">Lepší Bakaláři</a>
 	   <a href="https://chat.openai.com" class="file-programovani-link">ChatGPT</a>
+	   <a href="https://drive.google.com/file/d/14zX2B2dforl5AWTovcs0ASkYx-MymPF4/view" class="file-programovani-link">Minecraft v HTML</a>
+	   <a href="https://sites.google.com/view/pogunblocked/home" class="file-programovani-link">Time Killers</a>
     </div>
     <div class="category2 files">
 
