--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -128,9 +128,52 @@
     </div>
     </div>
     <div class="category3 files">
-      <a href="#" class="file-link">File 7</a>
-      <a href="#" class="file-link">File 8</a>
-      <a href="#" class="file-link">File 9</a>
+	<p class="file-site-text-main-filetype">PDF</p>
+      <div class="maturitaSiteFileType1">
+	  <a href="site/pdf/1. Přepínání.pdf" class="file-site-link">1. Přepínání</a> 
+	  <a href="site/pdf/2. Virtuální lokální sítě .pdf" class="file-site-link">2. Virtuální lokální sítě </a> 
+	  <a href="site/pdf/3. Dynamická konfigurace hostů.pdf" class="file-site-link">3. Dynamická konfigurace hostů</a> 
+	  <a href="site/pdf/4. Bezpečnost lokální sítě .pdf" class="file-site-link">4. Bezpečnost lokální sítě </a>
+	  <a href="site/pdf/5. Bezdrátové lokální sítě.pdf" class="file-site-link">5. Bezdrátové lokální sítě</a>
+	  <a href="site/pdf/6. Směrování.pdf" class="file-site-link">6. Směrování</a>
+	  <a href="site/pdf/7. Architektura a instalace OS.pdf" class="file-site-link">7. Architektura a instalace OS</a>
+	  <a href="site/pdf/8. Ukládání a ochrana dat.pdf" class="file-site-link">8. Ukládání a ochrana dat</a>
+	  <a href="site/pdf/9. Centrální správa.pdf" class="file-site-link">9. Centrální správa</a>
+	  <a href="site/pdf/10. Síťový dohled.pdf" class="file-site-link">10. Síťový dohled</a>
+	  <a href="site/pdf/11. Bezpečnostní hrozby.pdf" class="file-site-link">11. Bezpečnostní hrozby</a>
+	  <a href="site/pdf/12. Bezpečnostní opatření.pdf" class="file-site-link">12. Bezpečnostní opatření</a>
+	  <a href="site/pdf/13. Bezpečnost koncových zařízení.pdf" class="file-site-link">13. Bezpečnost koncových zařízení</a>
+	  <a href="site/pdf/14. Bezpečnostní dohled.pdf" class="file-site-link">14. Bezpečnostní dohled</a>
+	  <a href="site/pdf/15. Bezpečnostní analýza a incidenty .pdf" class="file-site-link">15. Bezpečnostní analýza a incidenty </a>
+	  <a href="site/pdf/16. Kybernetická bezpečnost v ČR.pdf" class="file-site-link">16. Kybernetická bezpečnost v ČR</a>
+	  <a href="site/pdf/17. Dynamické směrování.pdf" class="file-site-link">17. Dynamické směrování</a>
+	  <a href="site/pdf/18. Překlad síťových adres.pdf" class="file-site-link">18. Překlad síťových adres</a>
+	  <a href="site/pdf/19. Rozlehlé sítě.pdf" class="file-site-link">19. Rozlehlé sítě</a>
+	  <a href="site/pdf/20. Správa síťových prvků.pdf" class="file-site-link">20. Správa síťových prvků</a>
+	  </div>
+	<p class="file-site-text-second-filetype">DOCX</p>
+      <div class="maturitaSiteFileType2">
+	  <a href="site/docx/1. Přepínání.docx" class="file-site-link">1. Přepínání</a> 
+	  <a href="site/docx/2. Virtuální lokální sítě .docx" class="file-site-link">2. Virtuální lokální sítě </a> 
+	  <a href="site/docx/3. Dynamická konfigurace hostů.docx" class="file-site-link">3. Dynamická konfigurace hostů</a> 
+	  <a href="site/docx/4. Bezpečnost lokální sítě .docx" class="file-site-link">4. Bezpečnost lokální sítě </a>
+	  <a href="site/docx/5. Bezdrátové lokální sítě.docx" class="file-site-link">5. Bezdrátové lokální sítě</a>
+	  <a href="site/docx/6. Směrování.docx" class="file-site-link">6. Směrování</a>
+	  <a href="site/docx/7. Architektura a instalace OS.docx" class="file-site-link">7. Architektura a instalace OS</a>
+	  <a href="site/docx/8. Ukládání a ochrana dat.docx" class="file-site-link">8. Ukládání a ochrana dat</a>
+	  <a href="site/docx/9. Centrální správa.docx" class="file-site-link">9. Centrální správa</a>
+	  <a href="site/docx/10. Síťový dohled.docx" class="file-site-link">10. Síťový dohled</a>
+	  <a href="site/docx/11. Bezpečnostní hrozby.docx" class="file-site-link">11. Bezpečnostní hrozby</a>
+	  <a href="site/docx/12. Bezpečnostní opatření.docx" class="file-site-link">12. Bezpečnostní opatření</a>
+	  <a href="site/docx/13. Bezpečnost koncových zařízení.docx" class="file-site-link">13. Bezpečnost koncových zařízení</a>
+	  <a href="site/docx/14. Bezpečnostní dohled.docx" class="file-site-link">14. Bezpečnostní dohled</a>
+	  <a href="site/docx/15. Bezpečnostní analýza a incidenty .docx" class="file-site-link">15. Bezpečnostní analýza a incidenty </a>
+	  <a href="site/docx/16. Kybernetická bezpečnost v ČR.docx" class="file-site-link">16. Kybernetická bezpečnost v ČR</a>
+	  <a href="site/docx/17. Dynamické směrování.docx" class="file-site-link">17. Dynamické směrování</a>
+	  <a href="site/docx/18. Překlad síťových adres.docx" class="file-site-link">18. Překlad síťových adres</a>
+	  <a href="site/docx/19. Rozlehlé sítě.docx" class="file-site-link">19. Rozlehlé sítě</a>
+	  <a href="site/docx/20. Správa síťových prvků.docx" class="file-site-link">20. Správa síťových prvků</a>
+	  </div>
     </div>
     <script src="../index.js"></script>
   </body>
