--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -12,6 +12,7 @@
       <div class="category" onclick="showCategory('category2')">IT</div>
       <div class="category" onclick="showCategory('category3')">PSKV</div>
       <div class="category" onclick="showCategory('category4')">PRG</div>
+      <div class="category" onclick="showCategory('category5')">AJ</div>
     </div>
     <div class="category1 files">
 	  <p class="file-literatura-text-main">Analýza Textu</p>
@@ -179,7 +180,9 @@
     </div>
 	
 	<div class="category4 files">
-	<p class="file-Mprogramovani-text-main">Otázky</p>
+	<p class="file-Mprogramovani-text-main">Ostatní</p>
+	<a href="programovni/others/programovaniOsnova.pdf" class="file-Mprogramovani-link">Osnova</a>
+	<p class="file-Mprogramovani-text-main-second">Otázky</p>
 		<p class="file-Mprogramovani-text-main-filetype">PDF</p>
       <div class="maturitaMProgramovaniFileType1">
 	  <a href="programovani/pdf/1. Web a jeho realizace.pdf" class="file-Mprogramovani-link">1. Web a jeho realizace</a> 
@@ -225,6 +228,72 @@
 	  <a href="programovani/docx/18. Práce se soubory.docx" class="file-Mprogramovani-link">18. Práce se soubory</a>
 	  <a href="programovani/docx/19. GUI, prvky, jejich vlastnosti a události.docx" class="file-Mprogramovani-link">19. GUI, prvky, jejich vlastnosti a události</a>
 	  <a href="programovani/docx/20. GUI, vizuální rozložení prvků.docx" class="file-Mprogramovani-link">20. GUI, vizuální rozložení prvků</a>
+	  </div>
+	</div>
+	
+	<div class="category5 files">
+	<p class="file-Maj-text-main">Otázky</p>
+	<p class="file-Maj-text-main-filetype">PDF</p>
+      <div class="maturitaMajFileType1">
+	  <a href="aj/pdf/0. Self-reflection.pdf" class="file-Maj-link">0. Self-reflection</a> 
+	  <a href="aj/pdf/1. PC - basic information.pdf" class="file-Maj-link">1. PC - basic information</a> 
+	  <a href="aj/pdf/2. At the office, phoning.pdf" class="file-Maj-link">2. At the office, phoning</a> 
+	  <a href="aj/pdf/3. Mass media.pdf" class="file-Maj-link">3. Mass media</a>
+	  <a href="aj/pdf/4. Pilsen.pdf" class="file-Maj-link">4. Pilsen</a>
+	  <a href="aj/pdf/5. My practical training experience.pdf" class="file-Maj-link">5. My practical training experience</a>
+	  <a href="aj/pdf/6. My school, my career.pdf" class="file-Maj-link">6. My school, my career</a>
+	  <a href="aj/pdf/7. Educational systems in the CR and Great Britain.pdf" class="file-Maj-link">7. Educational systems in the CR and Great Britain</a>
+	  <a href="aj/pdf/8. Customs, traditions in the USA, GB, the CR.pdf" class="file-Maj-link">8. Customs, traditions in the USA, GB, the CR</a>
+	  <a href="aj/pdf/9. Formal letter.pdf" class="file-Maj-link">9. Formal letter</a>
+	  <a href="aj/pdf/9. Formal x informal writings.pdf" class="file-Maj-link">9. Formal x informal writings</a>
+	  <a href="aj/pdf/9. Parts of a Business Letter.pdf" class="file-Maj-link">9. Parts of a Business Letter</a>
+	  <a href="aj/pdf/10. A trip to the Czech Republic.pdf" class="file-Maj-link">10. A trip to the Czech Republic</a>
+	  <a href="aj/pdf/10. The Czech Republic - draft.pdf" class="file-Maj-link">10. The Czech Republic - draft</a>
+	  <a href="aj/pdf/11. Our school and the EU.pdf" class="file-Maj-link">11. Our school and the EU</a>
+	  <a href="aj/pdf/12,5. The British Royal Family.pdf" class="file-Maj-link">12,5. The British Royal Family</a>
+	  <a href="aj/pdf/12. London.pdf" class="file-Maj-link">12. London</a>
+	  <a href="aj/pdf/13. The UK.pdf" class="file-Maj-link">13. The UK</a>
+	  <a href="aj/pdf/14. The USA.pdf" class="file-Maj-link">14. The USA</a>
+	  <a href="aj/pdf/14. Washington and New York.pdf" class="file-Maj-link">14. Washington and New York</a>
+	  <a href="aj/pdf/15. Food.pdf" class="file-Maj-link">15. Food</a>
+	  <a href="aj/pdf/16. Australia, New Zealand.pdf" class="file-Maj-link">16. Australia, New Zealand</a>
+	  <a href="aj/pdf/17. Environment and energy in the 21st century.pdf" class="file-Maj-link">17. Environment and energy in the 21st century</a>
+	  <a href="aj/pdf/18. Cover letter.pdf" class="file-Maj-link">18. Cover letter</a>
+	  <a href="aj/pdf/18. CV.pdf" class="file-Maj-link">18. CV</a>
+	  <a href="aj/pdf/18. Jobs and occupations.pdf" class="file-Maj-link">18. Jobs and occupations</a>
+	  <a href="aj/pdf/19. Prague.pdf" class="file-Maj-link">19. Prague</a>
+	  <a href="aj/pdf/20. Money, methods of payment.pdf" class="file-Maj-link">20. Money, methods of payment</a>
+	  </div>
+	<p class="file-Maj-text-second-filetype">DOCX</p>
+      <div class="maturitaMajFileType2">
+	  <a href="aj/docx/0. Self-reflection.docx" class="file-Maj-link">0. Self-reflection</a> 
+	  <a href="aj/docx/1. PC - basic information.docx" class="file-Maj-link">1. PC - basic information</a> 
+	  <a href="aj/docx/2. At the office, phoning.docx" class="file-Maj-link">2. At the office, phoning</a> 
+	  <a href="aj/docx/3. Mass media.docx" class="file-Maj-link">3. Mass media</a>
+	  <a href="aj/docx/4. Pilsen.docx" class="file-Maj-link">4. Pilsen</a>
+	  <a href="aj/docx/5. My practical training experience.docx" class="file-Maj-link">5. My practical training experience</a>
+	  <a href="aj/docx/6. My school, my career.docx" class="file-Maj-link">6. My school, my career</a>
+	  <a href="aj/docx/7. Educational systems in the CR and Great Britain.docx" class="file-Maj-link">7. Educational systems in the CR and Great Britain</a>
+	  <a href="aj/docx/8. Customs, traditions in the USA, GB, the CR.docx" class="file-Maj-link">8. Customs, traditions in the USA, GB, the CR</a>
+	  <a href="aj/docx/9. Formal letter.docx" class="file-Maj-link">9. Formal letter</a>
+	  <a href="aj/docx/9. Formal x informal writings.docx" class="file-Maj-link">9. Formal x informal writings</a>
+	  <a href="aj/docx/9. Parts of a Business Letter.docx" class="file-Maj-link">9. Parts of a Business Letter</a>
+	  <a href="aj/docx/10. A trip to the Czech Republic.doc" class="file-Maj-link">10. A trip to the Czech Republic</a>
+	  <a href="aj/docx/10. The Czech Republic - draft.docx" class="file-Maj-link">10. The Czech Republic - draft</a>
+	  <a href="aj/docx/11. Our school and the EU.docx" class="file-Maj-link">11. Our school and the EU</a>
+	  <a href="aj/docx/12,5. The British Royal Family.docx" class="file-Maj-link">12,5. The British Royal Family</a>
+	  <a href="aj/docx/12. London.docx" class="file-Maj-link">12. London</a>
+	  <a href="aj/docx/13. The UK.docx" class="file-Maj-link">13. The UK</a>
+	  <a href="aj/docx/14. The USA.docx" class="file-Maj-link">14. The USA</a>
+	  <a href="aj/docx/14. Washington and New York.docx" class="file-Maj-link">14. Washington and New York</a>
+	  <a href="aj/docx/15. Food.docx" class="file-Maj-link">15. Food</a>
+	  <a href="aj/docx/16. Australia, New Zealand.docx" class="file-Maj-link">16. Australia, New Zealand</a>
+	  <a href="aj/docx/17. Environment and energy in the 21st century.docx" class="file-Maj-link">17. Environment and energy in the 21st century</a>
+	  <a href="aj/docx/18. Cover letter.docx" class="file-Maj-link">18. Cover letter</a>
+	  <a href="aj/docx/18. CV.docx" class="file-Maj-link">18. CV</a>
+	  <a href="aj/docx/18. Jobs and occupations.docx" class="file-Maj-link">18. Jobs and occupations</a>
+	  <a href="aj/docx/19. Prague.doc" class="file-Maj-link">19. Prague</a>
+	  <a href="aj/docx/20. Money, methods of payment.docx" class="file-Maj-link">20. Money, methods of payment</a>
 	  </div>
 	</div>
     <script src="../index.js"></script>
